# ScrappyTwitch

./: .gitignore  .gitmodules  Dockerfile  README.md  pyproject.toml
scrappy_bot/: start.py
scrappy_bot/core/: properties_reader.py  twitch_requests.py
scrappy_bot/core/data/: stream_status.py
scrappy_bot/core/flows/: streams_flow.py  users_flow.py  watch_flow.py
scrappy_bot/core/gateways/: streams_gateway.py  users_gateway.py  watch_gateway.py
scrappy_bot/core/presistance/: mongodb_client.py
scrappy_bot/resources/: config.ini
scrappy_bot/session/: login.py  stream.py  user.py  watcher.py
