[tool.poetry]
name = "scrappy-bot"
version = "0.0.1"
description = ""
authors = ["dbatalha <daniel.p.batalha@sapo.pt>"]
readme = "README.md"
packages = [
	{ include = "scrappy_bot/*.py" },
]

[tool.poetry.scripts]
scrappy-bot = "scrappy_bot.start:start"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
ascii-magic = "^2.3.0"
schedule = "^1.2.1"
pymongo = "^4.6.1"
termcolor = "^2.4.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
requests-mock = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
